--- a/app/src/main/res/layout/activity_parameters.xml
+++ b/app/src/main/res/layout/activity_parameters.xml
@@ -1,9 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ParametersActivity">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    tools:context=".ParametersActivity" android:orientation="vertical"
+    android:background="#eeeeee">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent" android:layout_height="110dp" android:textAlignment="center"
+        android:layout_margin="20dp" android:paddingTop="30dp" android:textSize="20dp"
+        android:text="Enter you username:"
+        android:gravity="center_horizontal" />
+
+    <LinearLayout
+        android:layout_margin="10dp" android:layout_gravity="center"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <EditText
+            android:id="@+id/edit_username"
+            android:layout_height="wrap_content" android:layout_width="wrap_content"
+            android:layout_margin="10dp" android:padding="10dp" android:layout_gravity="center"
+            android:inputType="text" android:hint="username" />
+
+        <Button
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:onClick="confirm_username" android:text="Confirm username" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/current_username"
+        android:layout_width="match_parent" android:layout_height="20dp"
+        android:layout_margin="10dp" android:textAlignment="center"
+        android:textSize="10dp"
+        android:gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="center" android:layout_margin="20dp" android:padding="15dp"
+        android:text="Back to menu" android:onClick="back" />
+
+</LinearLayout>
