--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Hello Welcome in GeoQuiz, press 'next' to start The game"
+        android:text="Hello Welcome in GeoQuiz, press 'next' to start the game"
         android:textSize="20dp"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:padding="20dp"/>
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
         android:textAlignment="center" android:gravity="center_horizontal" >
