--- a/app/src/main/res/layout/activity_parameters.xml
+++ b/app/src/main/res/layout/activity_parameters.xml
@@ -35,6 +35,12 @@
         android:layout_margin="10dp" android:textAlignment="center"
         android:textSize="10dp"
         android:gravity="center_horizontal" />
+    <TextView
+        android:id="@+id/current_points"
+        android:layout_width="match_parent" android:layout_height="20dp"
+        android:layout_margin="10dp" android:textAlignment="center"
+        android:textSize="10dp"
+        android:gravity="center_horizontal" />
 
     <Button
         android:layout_width="wrap_content" android:layout_height="wrap_content"
